--- a/views/partials/changePasswordModal.hbs
+++ b/views/partials/changePasswordModal.hbs
@@ -1,8 +1,38 @@
 <div id="changePasswordModal" class="modal modal-fixed-footer">
-    <div id="editDataLoader" class="progress">
+    <div id="changePasswordLoader" class="progress">
         <div class="indeterminate"></div>
     </div>
     <div class="modal-content">
-        <h4>Change Password<i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
+        <h4>Change User Password<i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
+        <form id="changePasswordForm" name="changePasswordForm">
+            <div class="row">
+                <div class="col s12 input-field">
+                    <input type="password" name="oldPassword" id="oldPassword">
+                    <label for="oldPassword">Old Password</label>
+                    <span class="helper-text" data-error="Invalid Password!">Enter Old Password</span>
+                    <span id="oldPasswordErrorMessage"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 input-field">
+                    <input type="password" name="newPassword" id="newPassword">
+                    <label for="newPassword">New Password</label>
+                    <span class="helper-text" data-error="Invalid Password! Password should be at least 8 characters long.">Password should be at least 8 characters long.</span>
+                    <span id="newPasswordErrorMessage"></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 input-field">
+                    <input type="password" name="confirmPassword" id="confirmPassword">
+                    <label for="confirmPassword">Confirm Password</label>
+                    <span class="helper-text" data-error="Passwords do not match!">Retype your password here</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 input-field">
+                    <button type="submit" id="changePasswordButton" class="btn">Change Password</button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
