--- a/views/partials/removeAccountModal.hbs
+++ b/views/partials/removeAccountModal.hbs
@@ -3,7 +3,7 @@
         <div class="indeterminate"></div>
     </div>
     <div class="modal-content">
-        <h4>Remove User Account<i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
+        <h4>Remove User Account</h4>
         <h6>Are you sure you want to permanently remove your account?</h6>
         <form id="removeAccountForm" name="removeAccountForm">
             <div class="row login-row">
