--- a/views/sell.hbs
+++ b/views/sell.hbs
@@ -1,8 +1,8 @@
 {{> header}}
 <main>
     <div id="sell-main">
-        <div class="row">
-            <div id="breadcrumb-container" class="col s12 container">
+        <div id="breadcrumb-container" class="row">
+            <div class="col s12 container">
                 <a href="/" class="breadcrumb">Home</a>
                 <a href="/sell" id="sell" class="breadcrumb">Sell on Z-Mart</a>
                 <h4>Sell on Zubis Mart</h4>
