--- a/public/css/style.css
+++ b/public/css/style.css
@@ -327,4 +327,8 @@ form .progress {
     .modal .modal-content {
         padding: 5px 14px 0 14px !important;
     }
+
+    .editModalButton {
+        margin-bottom: 20px;
+    }
 }
