--- a/views/partials/addServiceModal.hbs
+++ b/views/partials/addServiceModal.hbs
@@ -3,7 +3,7 @@
         <div class="indeterminate"></div>
     </div>
     <div class="modal-content">
-        <h4>Add Service for Sale<i id="modal-close" class="mdi mdi-close modal-close right"></i></h4>
+        <h4>Add Service for Sale</h4>
         <form id="addServiceForm" name="addServiceForm">
             <div class="row login-row">
                 <div class="col s12 input-field">
