Added Password Change Functionality

--- a/views/image.hbs
+++ b/views/image.hbs
@@ -1,5 +1,5 @@
 {{#if files}}
     {{#each files}}
-        <img src="/users/image/{{this.filename}}" alt="">
+        <img src="/users/{{this.filename}}" alt="">
     {{/each}}
 {{/if}}
