--- a/views/index.hbs
+++ b/views/index.hbs
@@ -218,7 +218,7 @@
                 <div class="row">
                     <div class="col s12 l6 input-field">
                         <i class="mdi mdi-alphabetical prefix"></i>
-                        <input type="text" name="firstName" id="firstName" class="validate" autofocus>
+                        <input type="text" name="firstName" id="firstName" class="validate">
                         <label for="firstName">Enter First Name</label>
                         <span class="helper-text" data-error="Invalid First Name!" data-success="Okay"></span>
                     </div>
