Added Image Retrieval Route

--- a/views/image.hbs
+++ b/views/image.hbs
@@ -1,5 +1,1 @@
-{{#if files}}
-    {{#each files}}
-        <img src="/users/{{this.filename}}" alt="">
-    {{/each}}
-{{/if}}
+<img src="data:image/jpeg;charset=utf-8;base64,{{files}}" alt="Image Here">
