--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -79,7 +79,7 @@
 }
 
 th {
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Dosis', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
 }
 
@@ -103,12 +103,12 @@ th {
 }
 
 .collection h4 {
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .collection-item a{
     color: #333;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
 }
 
