--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,7 @@
 .sub-header {
     text-align: center;
     color: #fa9609;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: lighter;
 }
 
@@ -11,7 +11,7 @@
 
 .card .card-content .card-title, .card .card-reveal .card-title {
     color: #a7b018 !important;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
 }
 
@@ -24,13 +24,13 @@
 }
 
 .card .card-reveal p {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .price {
     color: #555;
     cursor: default;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px !important;
     font-style: unset !important;
     font-weight: bold;
@@ -43,7 +43,7 @@
 #about {
     background-color: #fff;
     box-shadow: 5px 2px 5px #c5c5c5;
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Dosis', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.3rem;
     padding: 25px 50px;
 }
