--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ nav .nav-wrapper {
 }
 
 nav ul a {
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .dropdown-content {
@@ -88,7 +88,7 @@ form .progress {
 .modal h4, #loginFormHeader {
     border-bottom: 1px solid #e4e4e4;
     padding-bottom: 10px;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
     color: #666;
 }
@@ -107,7 +107,7 @@ form .progress {
 
 .input-field label {
     color: #c5c5c5;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani' ,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .input-field input:focus + label, .input-field textarea:focus + label {
@@ -136,7 +136,7 @@ form .progress {
 }
 
 .btn {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #login-button, button, #signupButton, #addItemButton, #addServiceButton, #changePasswordButton {
@@ -249,7 +249,7 @@ form .progress {
 
 .sidenav li > a, .sidenav li > a > .mdi {
     color: #fff;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .slider .indicators .indicator-item.active {
@@ -269,7 +269,7 @@ form .progress {
 .page-footer {
     background-color: transparent;
     color: #333 !important;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #footerLink li{
@@ -326,10 +326,6 @@ form .progress {
 
     #left-section {
         height: auto !important;
-    }
-
-    #right-section h5 {
-        display: none;
     }
 
     #loginModal {
