--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div>
-            <h5 class="sub-header">Latest Products</h5>
+            <h5 class="sub-header">Recent Products</h5>
             <div class="card-container row">
                 <div class="card sticky-action card-item hoverable col s12  l3">
                     <div class="card-image waves-effect waves-block waves-light">
