--- a/views/partials/addItemModal.hbs
+++ b/views/partials/addItemModal.hbs
@@ -21,12 +21,13 @@
                 <div class="col s12 input-field">
                     <select name="itemCategory" id="itemCategory">
                         <option value="" disabled selected>Choose a category</option>
-                        <option value="Accomodation">Accomodation</option>
-                        <option value="Beauty">Beauty</option>
+                        <option value="Phones & Electronics">Phones &amp; Electronics</option>
+                        <option value="Cosmetics">Cosmetics</option>
                         <option value="Books">Books</option>
                         <option value="Fashion">Fashion</option>
-                        <option value="Home Appliances">Home Appliances</option>
-                        <option value="Phones &amp; Gadgets">Phones &amp; Gadgets</option>
+                        <option value="Home & Furniture">Home &amp; Furniture</option>
+                        <option value="Vehicles">Vehicles</option>
+                        <option value="Others">Others</option>
                     </select>
                     <span class="helper-text" data-error="Please select an item category."></span>
                 </div>
