--- a/views/partials/addServiceModal.hbs
+++ b/views/partials/addServiceModal.hbs
@@ -9,14 +9,19 @@
                 <div class="col s12 input-field">
                     <select name="seviceCategory" id="seviceCategory">
                         <option value="" disabled selected>Choose a category</option>
-                        <option value="Fashion">Fashion</option>
-                        <option value="Gardening">Gardening</option>
-                        <option value="Home Cleaning">Home Cleaning</option>
-                        <option value="MC">MC</option>
-                        <option value="Performers/Artistes">Performers/Artistes</option>
-                        <option value="Phone &amp; Laptop Repairs">Phone &amp; Laptop Repairs</option>
+                        <option value="Accommodation">Accommodation</option>
+                        <option value="Catering">Catering</option>
+                        <option value="Furniture">Furniture</option>
+                        <option value="Hair Styling">Hair Styling</option>
+                        <option value="Home & Interior Decor">Home &amp; Interior Decor</option>
+                        <option value="Laundry">Laundry</option>
+                        <option value="Make up">Make up</option>
                         <option value="Photography">Photography</option>
                         <option value="Ushering">Ushering</option>
+                        <option value="Gardening">Gardening</option>
+                        <option value="MC & DJ">MC &amp; DJ</option>
+                        <option value="Phone & Laptop Repairs">Phone &amp; Laptop Repairs</option>
+                        <option value="others">Others</option>
                     </select>
                 </div>
             </div>
