--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,52 +5,70 @@
                 <a href="#!" class="brand-logo"><img id="logo" src="/img/logo.jpg" alt="Zubis Mart Logo"></a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-menu"><i id="menu-icon" class="mdi mdi-menu"></i></a>
                 <ul id="store-dropdown" class="dropdown-content">
-                    <li><a href="#">Accomodation</a></li>
+                    <li><a href="/products/phonesAndElectronics">Phones &amp; Electronics</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Beauty</a></li>
+                    <li><a href="/products/cosmetics">Cosmetics</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Books</a></li>
+                    <li><a href="/products/books">Books</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Fashion</a></li>
+                    <li><a href="/products/fashion">Fashion</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Home Appliances</a></li>
+                    <li><a href="/products/homeAndFurniture">Home &amp; Furniture</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Phones &amp; Gadgets</a></li>
+                    <li><a href="/products/vehicles">Vehicles</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/products/others">Others</a></li>
                 </ul>
                 <ul id="services-dropdown" class="dropdown-content">
-                    <li><a href="#">Photography</a></li>
+                    <li><a href="/services/accommodation">Accommodation</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Home Cleaning</a></li>
+                    <li><a href="/services/catering">Catering</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Ushering</a></li>
+                    <li><a href="/services/furniture">Furniture</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Gardening</a></li>
+                    <li><a href="/services/hairStyling">Hair Styling</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">MC</a></li>
+                    <li><a href="/services/homeAndDecor">Home &amp; Interior Decor</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Performers/Artistes</a></li>
+                    <li><a href="/services/laundry">Laundry</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Fashion</a></li>
+                    <li><a href="/services/makeUp">Make up</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Phone &amp; Laptop Repairs</a></li>
+                    <li><a href="/services/photography">Photography</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/services/ushering">Ushering</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/services/gardening">Gardening</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/services/mc">MC &amp; DJ</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/services/phoneAndLaptopRepairs">Phone &amp; Laptop Repairs</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/services/others">Others</a></li>
                 </ul>
                 <ul id="mobile-store-dropdown" class="dropdown-content">
-                    <li><a href="#">Accomodation</a></li>
-                    <li><a href="#">Beauty</a></li>
-                    <li><a href="#">Books</a></li>
-                    <li><a href="#">Fashion</a></li>
-                    <li><a href="#">Home Appliances</a></li>
-                    <li><a href="#">Phones &amp; Gadgets</a></li>
+                    <li><a href="/products/phonesAndElectronics">Phones &amp; Electronics</a></li>
+                    <li><a href="/products/cosmetics">Cosmetics</a></li>
+                    <li><a href="/products/books">Books</a></li>
+                    <li><a href="/products/fashion">Fashion</a></li>
+                    <li><a href="/products/homeAndFurniture">Home &amp; Furniture</a></li>
+                    <li><a href="/products/vehicles">Vehicles</a></li>
+                    <li><a href="/products/others">Others</a></li>
                 </ul>
                 <ul id="mobile-services-dropdown" class="dropdown-content">
-                    <li><a href="#">Photography</a></li>
-                    <li><a href="#">Home Cleaning</a></li>
-                    <li><a href="#">Ushering</a></li>
-                    <li><a href="#">Gardening</a></li>
-                    <li><a href="#">MC</a></li>
-                    <li><a href="#">Performers/Artistes</a></li>
-                    <li><a href="#">Fashion</a></li>
-                    <li><a href="#">Phone &amp; Laptop Repairs</a></li>
+                    <li><a href="/services/accommodation">Accommodation</a></li>
+                    <li><a href="/services/catering">Catering</a></li>
+                    <li><a href="/services/furniture">Furniture</a></li>
+                    <li><a href="/services/hairStyling">Hair Styling</a></li>
+                    <li><a href="/services/homeAndDecor">Home &amp; Interior Decor</a></li>
+                    <li><a href="/services/laundry">Laundry</a></li>
+                    <li><a href="/services/makeUp">Make up</a></li>
+                    <li><a href="/services/photography">Photography</a></li>
+                    <li><a href="/services/ushering">Ushering</a></li>
+                    <li><a href="/services/gardening">Gardening</a></li>
+                    <li><a href="/services/mc">MC &amp; DJ</a></li>
+                    <li><a href="/services/phoneAndLaptopRepairs">Phone &amp; Laptop Repairs</a></li>
+                    <li><a href="/services/others">Others</a></li>
                 </ul>
                 <ul class="hide-on-med-and-down right">
                     {{#if user}}
